# JARVIS

./: README.md  railway.json  render.yaml
.github/workflows/: build-apk.yml
backend/: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  wsgi.py
backend/plugins/: example_template.py
backend/src/jarvis/: __init__.py
backend/src/jarvis/ai/: __init__.py  emotion.py  knowledge.py
backend/src/jarvis/cli/: faces.py  main.py
backend/src/jarvis/core/: action_engine.py  agent.py  intent_parser.py  llm_core.py  memory.py  providers.py  reminders.py  scheduler.py  semantic_memory.py  task_manager.py  tool_definitions.py
backend/src/jarvis/dashboard/: __init__.py  notes.py  settings.py
backend/src/jarvis/local/: __init__.py  audio.py  camera.py
backend/src/jarvis/plugins/: __init__.py  base.py  manager.py
backend/src/jarvis/services/: os_control.py  people_research.py  research.py  smart_home.py  weather_service.py  web_search.py
backend/src/jarvis/speech/: __init__.py  synthesis.py  transcription.py
backend/src/jarvis/system/: __init__.py  control.py
backend/src/jarvis/vision/: __init__.py  faces.py  history.py  scenes.py
backend/src/jarvis/web/: app.py
backend/tests/: test_action_engine.py  test_dashboard.py  test_intent_parser.py  test_memory.py  test_plugins.py  test_speech.py  test_system.py  test_vision.py  test_vision_history.py
data/: memory.db
data/faces/: known_faces.pkl  people_data.xlsx
frontend/: .env.example  .gitignore  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.app.json  vercel.json  vite.config.ts
frontend/android/: capacitor.settings.gradle
frontend/public/: manifest.json  sw.js
(+64 files in other folders)
