[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.2.0"
description = "Personal AI assistant with voice, vision, and conversational AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pratham Rathod" }]

dependencies = [
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "elevenlabs>=1.0.0",
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.6",
    "pydub>=0.25.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "colorama>=0.4.6",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "psutil>=5.9.0",
    "schedule>=1.2.0",
    "face_recognition>=1.3.0",
    "opencv-python>=4.8.0",
    "google-generativeai>=0.7.0",
    "wikipedia>=1.4.0",
    "textblob>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
windows = ["pywin32>=306"]

[project.scripts]
jarvis = "jarvis.cli.main:main"
jarvis-web = "jarvis.web.app:main"
jarvis-faces = "jarvis.cli.faces:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jarvis = ["config/*.yaml", "config/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
